# nvidia-nemotron-demo

./: README.md  demo.ipynb  pyproject.toml
src/sales_intelligence_research_automation/: crew.py  main.py
src/sales_intelligence_research_automation/config/: agents.yaml  tasks.yaml
