[project]
name = "sales_intelligence_research_automation"
version = "0.1.0"
description = "sales_intelligence_research_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
sales_intelligence_research_automation = "sales_intelligence_research_automation.main:run"
run_crew = "sales_intelligence_research_automation.main:run"
train = "sales_intelligence_research_automation.main:train"
replay = "sales_intelligence_research_automation.main:replay"
test = "sales_intelligence_research_automation.main:test"
run_with_trigger = "sales_intelligence_research_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
